--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ http {
   server {
     listen 443 ssl;
     server_name kamradtfamily.net;
-    ssl_certificate /etc/certs/mydomain.pem;
-    ssl_certificate_key /etc/certs/mydomain.pem;
+    ssl_certificate /etc/certs/kamradtfamily.net.pem;
+    ssl_certificate_key /etc/certs/kamradtfamily.net.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
     location ~ ^/(html|images|javascript|js|css|flash|media|static)/ {
