--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,8 @@ http {
     ssl_certificate_key /etc/certs/kamradtfamily.net.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
-    location ~ ^/(html|images|javascript|js|css|flash|media|static)/ {
-      index index.html;
-      root /etc/nginx/html;
-      expires 3s;
-      include /etc/nginx/mime.types;
+    location / {
+        proxy_pass http://phpapp:8000/;
     }
   }
 }
