--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,53 @@ events {}
 http {
   server {
     listen 443 ssl;
+    server_name vouch.kamradtfamily.net;
+
+    ssl_certificate /etc/certs/kamradtfamily.net.pem;
+    ssl_certificate_key /etc/certs/kamradtfamily.net.key;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    auth_request /vouch-validate;
+
+    # Proxy to your Vouch instance
+    location / {
+      proxy_set_header  Host  login.avocado.lol;
+      proxy_set_header  X-Forwarded-Proto https;
+      proxy_pass        http://vouch:9090;
+    }
+  }
+  server {
+    listen 443 ssl;
     server_name kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
     ssl_certificate_key /etc/certs/kamradtfamily.net.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
-    location / {
+    auth_request /vouch-validate;
+
+    location = /vouch-validate {
+      # This address is where Vouch will be listening on
+      proxy_pass http://vouch:9090/validate;
+      proxy_pass_request_body off; # no need to send the POST body
+
+      proxy_set_header Content-Length "";
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # these return values are passed to the @error401 call
+      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
+      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
+      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
+    }
+
+    error_page 401 = @error401;
+
+    # If the user is not logged in, redirect them to Vouch's login URL
+    location @error401 {
+      return 302 https://vouch.kamradtfamily.net/login?url=https://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
+    }
+        location / {
         proxy_pass http://phpapp:8000;
     }
   }
