--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
   }
   server {
     listen 443 ssl;
-    server_name kamradtfamily.net;
+    server_name phpdemo.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
     ssl_certificate_key /etc/certs/kamradtfamily.net.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
