use upstream server for initial validate '

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
 
     location = /vouch-validate {
       # This address is where Vouch will be listening on
-      proxy_pass http://vouch:9090/validate;
+      proxy_pass https://vouch.kamradtfamily.net/validate;
       proxy_pass_request_body off; # no need to send the POST body
 
       proxy_set_header Content-Length "";
@@ -48,7 +48,7 @@ http {
     location @error401 {
       return 302 https://vouch.kamradtfamily.net/login?url=https://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
     }
-        location / {
+    location / {
         proxy_pass http://phpapp:8000;
     }
   }
