--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
 
     # Proxy to your Vouch instance
     location / {
-      proxy_set_header  Host  login.avocado.lol;
+      proxy_set_header  Host $http_host;
       proxy_set_header  X-Forwarded-Proto https;
       proxy_pass        http://vouch:9090;
     }
@@ -28,7 +28,7 @@ http {
 
     location = /vouch-validate {
       # This address is where Vouch will be listening on
-      proxy_pass https://vouch.kamradtfamily.net/validate;
+      proxy_pass http://vouch:9090/validate;
       proxy_pass_request_body off; # no need to send the POST body
 
       proxy_set_header Content-Length "";
