--- a/nginx.conf
+++ b/nginx.conf
@@ -38,9 +38,10 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
 
       # these return values are passed to the @error401 call
-      auth_request_set auth_resp_jwt $upstream_http_x_vouch_jwt;
-      auth_request_set auth_resp_err $upstream_http_x_vouch_err;
-      auth_request_set auth_resp_failcount $upstream_http_x_vouch_failcount;
+      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
+      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
+      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
+      echo "args: $auth_resp_jwt $auth_resp_err $auth_resp_failcount"
     }
 
     error_page 401 = @error401;
