--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
       auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
       auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
       auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
-      echo "args: $auth_resp_jwt $auth_resp_err $auth_resp_failcount"
+      echo "args: $auth_resp_jwt $auth_resp_err $auth_resp_failcount";
     }
 
     error_page 401 = @error401;
