--- a/nginx.conf
+++ b/nginx.conf
@@ -52,4 +52,15 @@ http {
         proxy_pass http://phpapp:8000;
     }
   }
+  server {
+    listen 443 ssl;
+    server_name phpapi.kamradtfamily.net;
+    ssl_certificate /etc/certs/kamradtfamily.net.pem;
+    ssl_certificate_key /etc/certs/kamradtfamily.net.key;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    location /api {
+        proxy_pass http://phprest:8001;
+    }
+  }
 }
