--- a/nginx.conf
+++ b/nginx.conf
@@ -54,12 +54,12 @@ http {
   }
   server {
     listen 443 ssl;
-    server_name phpapi.kamradtfamily.net;
+    server_name phprest.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
     ssl_certificate_key /etc/certs/kamradtfamily.net.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
-    location /api {
+    location / {
         proxy_pass http://phprest:8001;
     }
   }
