--- a/nginx.conf
+++ b/nginx.conf
@@ -85,6 +85,16 @@ http {
     }
     location / {
         proxy_pass http://jupyter:8888;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # websocket headers
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_buffering off;
     }
   }
   server {
