--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,11 @@
-error_log debug;
+error_log /dev/stdout info;
 events {}
 http {
   map $http_upgrade $connection_upgrade {
       default upgrade;
       ''      close;
   }
+  access_log /dev/stdout;
   server {
     listen 443 ssl;
     server_name vouch.kamradtfamily.net;
