access logs in each server

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ http {
   }
   access_log /dev/stdout;
   server {
+    access_log /dev/stdout;
     listen 443 ssl;
     server_name vouch.kamradtfamily.net;
 
@@ -23,6 +24,7 @@ http {
     }
   }
   server {
+  access_log /dev/stdout;
     listen 443 ssl;
     server_name phpdemo.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
@@ -58,6 +60,7 @@ http {
     }
   }
   server {
+  access_log /dev/stdout;
     listen 443 ssl;
     server_name jupyter.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
@@ -103,6 +106,7 @@ http {
     }
   }
   server {
+  access_log /dev/stdout;
     listen 443 ssl;
     server_name phprest.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
