access logs in each server

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+daemon off;
 error_log /dev/stdout debug;
 events {}
 http {
@@ -24,7 +25,7 @@ http {
     }
   }
   server {
-  access_log /dev/stdout;
+    access_log /dev/stdout;
     listen 443 ssl;
     server_name phpdemo.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
@@ -60,7 +61,7 @@ http {
     }
   }
   server {
-  access_log /dev/stdout;
+    access_log /dev/stdout;
     listen 443 ssl;
     server_name jupyter.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
@@ -106,7 +107,7 @@ http {
     }
   }
   server {
-  access_log /dev/stdout;
+    access_log /dev/stdout;
     listen 443 ssl;
     server_name phprest.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
