--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ http {
       default upgrade;
       ''      close;
   }
+  limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
   access_log /dev/stdout;
   server {
     access_log /dev/stdout;
@@ -18,6 +19,7 @@ http {
 
     # Proxy to your Vouch instance
     location / {
+      limit_req zone=mylimit burst=20 delay=8;
       proxy_set_header  Host $http_host;
       proxy_set_header  X-Forwarded-Proto https;
       proxy_pass        http://vouch:9090;
@@ -63,13 +65,47 @@ http {
   server {
     access_log /dev/stdout;
     listen 443 ssl;
-    server_name phprest.kamradtfamily.net;
+    server_name pyrest.kamradtfamily.net;
     ssl_certificate /etc/certs/kamradtfamily.net.pem;
     ssl_certificate_key /etc/certs/kamradtfamily.net.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
     location / {
+        limit_req zone=mylimit burst=20 delay=8;
         proxy_pass http://pyrest:5000;
+    }
+  }
+  server {
+    listen 443 ssl;
+    server_name winecheese.kamradtfamily.net;
+    ssl_certificate /etc/certs/kamradtfamily.net.pem;
+    ssl_certificate_key /etc/certs/kamradtfamily.net.key;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    # different things to try for locations that begin with /
+    location / {
+        limit_req zone=mylimit burst=20 delay=8;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+      expires 1M;
+      access_log off;
+      add_header Cache-Control "public";
+    }
+
+    location ~* \.(?:css|js)$ {
+        try_files $uri =404;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location ~ ^.+\..+$ {
+        try_files $uri =404;
     }
   }
 }
