--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   nginx:
-    image: nginx
+    image: rlkamradt/winecheeseui
     restart: always
     volumes:
      - ./nginx.conf:/etc/nginx/nginx.conf
